--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/microservices": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/platform-socket.io": "^7.6.15",
+    "@nestjs/platform-ws": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/websockets": "^7.6.15",
     "dotenv": "^8.2.0",
     "google-protobuf": "^3.15.6",
     "grpc": "^1.24.6",
@@ -36,7 +39,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
-    "typeorm": "^0.2.31"
+    "typeorm": "^0.2.31",
+    "ws": "^7.4.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
@@ -45,6 +49,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
+    "@types/socket.io": "^2.1.13",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
